--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-  "prefix": "your-prefix",
+  "prefix": ".",
   "greetNewMembers": {
         "enabled": true,
         "gifUrl": "https://tinyurl.com/2xzaydex"
   },
   "port": "8080",
   "owner": "your-name",
-  "owner_id": your-uid,
-  "token": "token-here",
-  "age": "14+",
+  "owner_id": '6590076291',
+  "token": "7429487217:AAGbYzhOkLipvvrOLTvMCY82fJ5tiYPcSdU",
+  "age": "18+",
   "gender": "male",
-  "country": "Bangladesh"
+  "country": "Nepal"
 }
