--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
         "gifUrl": "https://tinyurl.com/2xzaydex"
   },
   "port": "8080",
-  "owner": "your-name",
+  "owner": "Luffy",
   "owner_id": '6590076291',
   "token": "7429487217:AAGbYzhOkLipvvrOLTvMCY82fJ5tiYPcSdU",
   "age": "18+",
